--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Updated title to Horiseon -->
     <title>Horiseon</title>
 </head>
@@ -35,14 +35,14 @@
         <!-- Added id -->
         <section id="search-engine-optimization">
             <!-- Added img alt for each image -->
-            <img src="search-engine-optimization.jpg" alt="Search engine Optimization" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management">
-            <img src="online-reputation-management.jpg" alt="Online reputation management" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online reputation management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -61,7 +61,7 @@
         <!-- Replaced class with id for unique element -->
         <section id="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="lead-generation.png" alt="Lead generation" />
+            <img src="./assets/images/lead-generation.png" alt="Lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -69,7 +69,7 @@
         <!-- Replaced class with id for unique element -->
         <section id="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="brand-awareness.png" alt="Brand awareness" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -77,7 +77,7 @@
         <!-- Replaced class with id for unique element -->
         <section id="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="cost-management.png" alt="Cost management"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost management"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
